--- a/docker-compose.nvidia.yml
+++ b/docker-compose.nvidia.yml
@@ -26,21 +26,8 @@
 # POSSIBILITY OF SUCH DAMAGE.
 version: "2.3"
 services:
-  xserver:
-    image: devrt/xserver
-    ipc: host
-    security_opt:
-      - seccomp:unconfined
-    environment:
-      - DISPLAY=:1
-    ports:
-      - "3000:80"
-    healthcheck:
-      test: ["CMD-SHELL", "test -e /tmp/.X11-unix/X0"]
-      interval: "1s"
-      retries: 20
   simulator:
-    image: ghcr.io/gentlebots/tmc_wrs_docker_ros2:nvidia
+    image: ghcr.io/gentlebots/tmc_wrs_docker_rc_melodic_and_bridges:nvidia
     ipc: host
     security_opt:
       - seccomp:unconfined
@@ -50,31 +37,9 @@ services:
       - VGL_DISPLAY=:1
     volumes:
       - /tmp/.X11-unix/X0:/tmp/.X11-unix/X0
-    volumes_from:
-      - xserver
-    depends_on:
-      - xserver
-  workspace:
-    # env_file:
-    #   - .env
-    build:
-      context: .
-      dockerfile: Dockerfile.nvidia
-    ipc: host
-    security_opt:
-      - seccomp:unconfined
-    runtime: nvidia
-    ports:
-      - "3001:3000"
-      - "3002:8888"
-    volumes:
-      - .:/workspace:cached
-      - ~/.gitconfig:/home/developer/.gitconfig
-    environment:
-      - DISPLAY=:1
-      - ROS_MASTER_URI=http://simulator:11311/
-    volumes_from:
-      - xserver
-      - simulator
-    depends_on:
-      - xserver
+      - ~/robocup_melodic_ws:/home/developer/robocup_melodic_ws
+    networks:
+      - robocup2021-opl_default
+networks:
+  robocup2021-opl_default:
+    external: true
